--- a/abccaretreatmenteffects_report_main.tex
+++ b/abccaretreatmenteffects_report_main.tex
@@ -37,6 +37,39 @@ The University of Chicago}
 \listoftables
 \pagebreak
 
+\section{Introduction}
+
+\noindent One of President Barack Obama's policy flags throughout his mandate has been the promotion of early childhood education \citep{Bajaj_Labaton_2009_ObamaRiskAssets,White_House_2014_Econ_of_EC_Investments,White_House_2014_Fact_Sheet_Press}. He has used it as a base to argue in favor of reducing socio-economic inequality. Both Democratic and Republican candidates to succeed Obama have placed considerable priority to discuss early childhood education.\footnote{Candidates from both parties consider access to education a right Americans should have; all make particular emphasis on early childhood education \citep{Hillary-for-Am_2016_Universal-Preschool,On-the-Issues_2016_Sanders-on-Families,On-the-Issues_2016_Cruz-on-Education}.} Yet, comprehensive and methodologically rigorous evidence on the efficiency and effectiveness of early childhood education programs is still scarce. Most of the recent studies have either of the following pitfalls: (i) focus on a limited set of outcomes that fail to account for the complete set of outcomes a program can impact;\footnote{An extreme example is the evaluation of preschool programs using an age-eligibility cutoff. A battery of studies compare children who were just eligible to children who were just ineligible given their birth dates and assess the gain of an additional year of preschool. This does not represent a comprehensive evaluation approach. Instead, it is an evaluation comparing an arbitrary set of children, in a very narrow set of tests. Examples of these studies include: \citep{Gormley_Gayer_2005_JHR,Gormley_Gayer_etal_2005_DP,Weiland_2013_CD_Impacts-of-Pre-K}.} (ii) do not take into account that, even when evaluating randomized controlled trials, evaluation methodologies need to account for non-compliance to the initial assignment to treatment or treatment substitution by the control families;\footnote{A relevant example is the evaluation of Head Start through its randomized controlled trial, the Head Start Impact Study \citep{Puma_Bell_etal_2010_HeadStartImpact}. Comparing the children in the treatment and the control groups usually yields relative low gains. This happens because a substantial proportion of children randomized out of the program were enrolled into preschool alternatives, some of them to other Head Start centers. Thus, a raw comparison between the treatment and the control groups children does not inform on either the efficiency or the effectiveness of Head Start. Studies providing a methodology to account for treatment substitution find that Head Start has substantial effects, although they focus on a single, short-term outcome \citep{Kline-Walters_2015_NBER-Evaluating,Feller_Grindal_etal_2016_ComparedtoWhat}.} and (iii) evaluate randomized controlled trials with flawed designs.\footnote{An evaluation Tennessee Voluntary Prekindergarten is an emblematic example of this \citep{Lipsey_et_al_2013_Tennessee_Kindergrtn_PRI,Lipsey_et_al_2015_Randomized_Control_Trial_PRI}. The researchers designed a randomized controlled trial to evaluate the program. Unfortunately, they asked permission to assess the children after the randomization protocol. Thus, they have information available for children whose parents agreed for them to be evaluates \textit{post} randomization, inducing a potential imbalance between the children randomized in and out of the program. The evaluation does not account for that. Further, the results this evaluation present are on a narrow and short-term set of outcomes.}\\ 
+
+\noindent  The case for the economic efficiency of early childhood education in the US is largely based on evidence from the Perry Preschool Program (Perry). Analyzing Perry has clarified: (i) that early childhood education has significant positive effects on a variety short and long-term socio-economic outcomes, even when accounting for compromised randomization, small sample size inference, and multiple hypotheses testing \citep{Heckman_Moon_etal_2010_QE}; (ii) that early childhood education is not only effective at boosting socio-economic outcomes, but could have an annual internal rate of return that ranges between 7 and 10 percent. If one dollar were to be invested at age 4, and then yearly reinvested and compounded over a a life-time, the return would accrue to 60 to 300 dollars by age 65. This accounts for all the programs' cost and the social burden a government would cause by raising taxes to pay for it \citep{Heckman_Moon_etal_2010_RateofReturn}; and (iii) the mechanisms through which early education programs generate gains in long-term outcomes. The findings suggest that gains in socio-emotional skills, much more than gains cognitive skills, mediate reductions in criminal behavior and increases in employment and labor income \citep{Heckman_Pinto_etal_2013_PerryFactor}.\\
+
+\noindent A common critique on the evidence favoring the economic case for early childhood education is the lack of an ampler evidence base. This paper presents a rigorous evaluation of two related randomized controlled trials, the Carolina Abecedarian Project (ABC). and the Carolina Approach to Responsive Education (CARE). These two programs allow us to assess the short- and long-term effects of early childhood education on multiple dimensions of human development.\\
+
+\noindent ABC and CARE were programs implemented in the early 1970s and late 1980s, and therefore we observe long-term outcomes of their participants. In the first phase, both programs assigned high-quality center-based childcare from ages 0 to 5 to a treatment group and no treatment at all to a control group. In addition, the children who were assigned center-based childcare in CARE also received home visits that aimed to foster the relationship between the participant children and their parents. Also, CARE had a second treatment group with home visits and no center-based childcare. Both programs had had a second phase of treatment from ages 5 to 8, that consisted of home visits that aimed to continue to assists the children's development. In ABC, the second stage treatment was also assigned randomly, at age 5 independently of the first-phase randomization. The design of these programs allows us to tests hypotheses to evaluate the effectiveness of different type of programs, as well as the effectiveness of intervening at different stages of childhood.\\
+
+\noindent As any social experiment, the two programs have methodological complications. We construct a methodology to evaluate the program in the presence of these.\footnote{Another usual critique to programs like ABC and CARE we do not assess here is their small sample size. Asymptotic inference methods, however, are well suited to analyze samples of the size of these programs \citep{Hanushek_Lindseth_2009_BOOKSchoolhousesCourthouses}. \citet{
+Campbell_Conti_etal_2014_EarlyChildhoodInvestments} evaluate the effectiveness of ABC at boosting results both using small sample size inference and an asymptotic procedure without finding little sensitivity if at all.}\\ 
+
+\noindent We acknowledge and propose a methodology to account for cases of non-compliance to treatment for which ABC has been criticized \citep{} \textbf{[JLG: citation in the process of being added to heckman.bib.]}. In fact, we present a thorough documentation for each of the cases of non-compliance at each stage of the data collection for both programs.\\ 
+
+\noindent We also present a thorough documentation of treatment substitution. In both programs, the parents of around 70\% of the children randomized out of center-based childcare enrolled their children in relatively high-quality preschool alternatives. We develop a methodology to account for treatment substitution and explain that there are two policy questions that we are able to ask using the data of ABC and CARE. First, we can ask what is the effect of ABC or CARE given the supply of preschool alternatives that was available when they were implemented. Second, we can ask what is the effect of ABC or CARE relative to a fixed alternative, no preschool at all, a preschool alternative, etc. The second question better speaks to the effectiveness and efficiency of the programs. Any statistic summarizing effectiveness and efficiency is respect to a relative, known alternative.\\
+
+\noindent Finally, we propose a method to summarize the effectiveness of a program when information on multiple outcomes throughout the life-cycle is available. There are two current alternatives in the literature. One is to to calculate statistics that speak to the efficiency of a social program, as the internal rate of return or the benefit-to-cost ratio \citep{Heckman_Moon_etal_2010_RateofReturn}. The other is to group outcomes in arbitrary categories---e.g. cognition, criminal activity, health---and adjust the inference on each of the outcomes to account for multiple hypotheses testing and avoid ``cherry picking'' significant results \citep{Lehman_Romano_2005_AnnStat,Lehmann_Romano_2005_testing,Heckman_Moon_etal_2010_QE}. The alternative we propose consists of calculating and formalizing an inference procedure for (i) the count of outcomes for which the program causes a positive treatment effect; (ii) the count of outcomes for which the program cases a \text{significant} and positive treatment effect, considering different levels of significance.\footnote{This alternative is an application of the making an inference on an statistic summarizing multiple sources of information, i.e. a combining function \citep{Pesarin_Salmaso_2010_PermutationTests}.}\\
+
+\noindent In the rest of the paper, we formalize through several procedures the data description in Table~\ref{table:}, and find solid robustness. We evaluate 141 outcomes describing human development throughout the life-cycle. Although we present counts over all the outcomes, we group them in categories for simplicity. These are, maternal employment, life-cycle cognition, teenage socio-emotional skills, adulthood socio-emotional skills, education, employment and income, crime, and health. For each outcome, we calculate the mean difference between the treatment and control groups in ABC and the two treatment groups and the control group in CARE.\\
+
+\noindent For ABC 100 out of 141 outcomes show positive treatment effects, as measures by the mean difference between hte treatment and the control groups. When we limit the control sample to children who did not participate of any treatment alternatives, this number increases to 108. As we argue throughout the paper, this number better describes the effectiveness of ABC because it compares treatment to a fixed, relative alternative, no treatment at all. $54\%$ of the results are positive and significant at the $10\%$. At the significance level of $10\%$, 14 outcomes should be positive and significant, a much lower number than $54\%$.\\
+
+\noindent For CARE, the results indicate that the treatment that had center-based childcare and home visits was much more effective than the treatment that had home visits only. The results of the former very much in line with the results of ABC. We come to this conclusion by comparing both treatment groups to the same control group. Actually, taken together, these comparisons establish that center-based childcare treatment is much more effective than home visits.\\
+
+\noindent \textbf{[JLG: table with main description of raw data.]}\\
+
+\noindent We also tests diverse hypotheses to assess the effectiveness of the second-phase randomization. The results are not at all comparable to the results of the first-phase randomization. We conclude that these programs were much more effective when intervening before age 5, rather than from ages 5 to 8.\\
+
+\noindent This paper continues the work of \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, who analyze the effectiveness of ABC at boosting long-term health outcomes. It also provides the methodology and the treatment effect estimates that feed into our companion paper, \citet{Elango_et_al_2015_ABC_unpublished}. In it, we use the treatment effects in this paper to forecasts the life-cycle gains of ABC on multiple dimensions of human development, from birth and until death, to calculate its internal rate of return and its benefit-to-cost ratio.\\
+
+\noindent The rest of the paper proceeds as follows. Section~\ref{section:background} describes the background of the program. It includes an overview, a description of the eligibility criteria and the populations served, an characterization of the randomization protocol and of treatment substitution, and comprehensive summary of the program.  Section~\ref{section:methodology} formalizes our methodology, discussing how we assess compromised randomization and non-compliance, treatment substitution, and multiple hypotheses testing. Section~\ref{section:results} presents our main results and Section~\ref{section:conclusion} offers some final comments. An extensive Appendix presents a much more thorough description of the program and data relative to what we present here. It also discusses various alternative methodologies to evaluate the programs, and documents the results we present in a lengthier way. 
+
 \section{Background} \label{section:background}
 \subsection{Overview}
 
@@ -108,7 +141,7 @@ The University of Chicago}
 		\centering
 		\includegraphics[width=.9\columnwidth]{output/abc_Diagram.pdf}
 \floatfoot{
-\tiny
+\footnotesize
 \noindent
 Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable R represents randomization into treatment [R=1] or control [R=0] groups. After the original randomization, some children died or withdrew from the program early in life and were replaced. R also includes those replacements. Arrows pointing outside the diagram indicate children who left the study permanently. The variable P represents participation in the preschool-age program. The variable SR represents randomization into the school-age program [SR=1], or out of it [SR=0]. Some children were not randomized at school age [SR=No]. We use the term temporary attrited for children who did not participate in the study at school age, but were later interviewed in the age-21 followup.
 }
@@ -234,14 +267,14 @@ Y_{r} \left(\text{fix } A = a \right) | X \sim Y_{r} | X.
 
 \noindent To measure the impact of ABC as a program in itself, it is more relevant to ask what is the effect of treatment relative to a counter-factual scenario in which all children are fixed to the same alternative such as staying at home or attending a low-quality preschool. This question needs to account for treatment substitution by the control group because it requires the counter-factual for the control status to be fixed to a homogeneous alternative. By fixing the children in the control group to a level of alternative preschool, we can accurately compare children in the treatment and control groups. \\
 
-\noindent Let $P$ indicate if the child attended alternative preschool. The value of $P$ could either be fixed to indicate no take-up of a preschool alternative ($P = 0$) or take-up of preschool alternative $(P = 1)$. \textbf{[Sherry: when you say preschool alternative, what you really mean is a center-based childcare alternative or treatment alternative, yes?. Did you purposefully decide to use the word preschool?]}We want to contrast the following hypotheses: 
+\noindent Let $P$ indicate if the child attended alternative preschool. The value of $P$ could either be fixed to indicate no take-up of a preschool alternative ($P = 0$) or take-up of preschool alternative $(P = 1)$. We want to contrast the following hypotheses: 
 
 \begin{eqnarray}
-H_{0}^B &:& Y_{0} \left( \text{fix } P = 0 \right) \sim Y_{1} \left( \text{fix } P = 0 \right) \\
-H_{0}^C &:& Y_{0} \left( \text{fix } P = 1 \right) \sim Y_{1} \left( \text{fix } P = 1\right). 
+H_{0}^B &:& Y_{0} \left( \text{fix } P = 0 \right) \sim Y_{1} \left( \text{fix } P = 0 \right) \label{eq:hoB} \\
+H_{0}^C &:& Y_{0} \left( \text{fix } P = 1 \right) \sim Y_{1} \left( \text{fix } P = 1\right) \label{eq:hoC}. 
 \end{eqnarray}
 
-\noindent That is, we want to compare the counter-factual treatment distributions when fixing children to no alternative preschool ($H_{0}^A$) and when fixing children to alternative preschool ($H_{0}^B$).\footnote{This treats alternative preschool as a binary decision, although it is continuous as we show in Figure~\ref{fig:treatsubabc}. We take this approach because we are limited by our sample size when predicting preschool take-up as we show in Appendix~\ref{appendix:methods}.}\\
+\noindent That is, we want to compare the counter-factual treatment distributions when fixing children to no alternative preschool ($H_{0}^B$) and when fixing children to alternative preschool ($H_{0}^C$).\footnote{This treats alternative preschool as a binary decision, although it is continuous as we show in Figure~\ref{fig:treatsubabc}. We take this approach because we are limited by our sample size when predicting preschool take-up as we show in Appendix~\ref{appendix:methods}.}\\
 
 \noindent To contrast these hypotheses, consider the following estimators: 
 
@@ -274,9 +307,11 @@ Y = \Delta \left( \text{fix } P = 0 \right) R + X \beta + \varepsilon,
 
 \subsection{Multiple Treatment Groups}
 
-\noindent We can readily apply the methodology in Section~\ref{section:methodsquestions}  to test either of the hypotheses in \eqref{eq:itt}, \eqref{eq:ittp0}, \eqref{eq:ittp1} for ABC.\textbf{[Sherry: Those equations are ITT but not actual hypotheses. Either write ``estimate the ITTS" or refer to the actual hypotheses equations]} In CARE, however, there was one control and two treatment groups. A simple extension of the framework in Section~\ref{section:methodsquestions} allows us to test various hypotheses that measure the effectiveness of the program.\\
+\noindent We can readily apply the methodology in Section~\ref{section:methodsquestions}  to test either of the hypotheses in \eqref{eq:ho}, \eqref{eq:hoB}, \eqref{eq:hoC} for ABC.\\
 
-\noindent As before, let $Y_{d}$ denote a counter-factual outcome. \textbf{[Sherry: This is inconsistent with the previous section where you use $Y_{r}$ to refer to a counter-factual outcome. Also, it is confusing what $d$/$r$ is. Is $Y_{0}$ an instance of $Y_{d}$]}$Y_{0}$ is the outcome when the individual is fixed to control, $Y_{1}$ when she is fixed to family education treatment, and $Y_{2}$ when she is fixed to center-based childcare and family education treatment.\footnote{Since compliance was nearly perfect, we can apply a weighting method as in Section~\ref{section:methodsquestions} to adjust for the single non-compliance case, we do not discuss non-compliance in this argument.} To evaluate the program, we consider the following hypotheses: 
+\textbf{[Sherry: Those equations are ITT but not actual hypotheses. Either write ``estimate the ITTS" or refer to the actual hypotheses equations]} In CARE, however, there was one control and two treatment groups. A simple extension of the framework in Section~\ref{section:methodsquestions} allows us to test various hypotheses that measure the effectiveness of the program.\\
+
+\noindent As before, let $Y_{r}$ denote a counter-factual outcome. $Y_{0}$ is the outcome when the individual is fixed to control, $Y_{1}$ when she is fixed to family education treatment, and $Y_{2}$ when she is fixed to center-based childcare and family education treatment.\footnote{Since compliance was nearly perfect, we can apply a weighting method as in Section~\ref{section:methodsquestions} to adjust for the single non-compliance case, we do not discuss non-compliance in this argument.} To evaluate the program, we consider the following hypotheses: 
 
 \begin{eqnarray}
 H_{0}^D: Y_{0} \sim Y_{1} \\ 
@@ -292,9 +327,7 @@ H_{0}^F: Y_{1} \sim Y_{2}
 
 \noindent An alternative method for evaluating the first-phase of ABC and CARE is to combine the data from both programs and test the effect of the common elements of their treatments. The ABC treatment group and the CARE center-based childcare and family education treatment group were subject to the same center-based childcare treatment component, with the CARE children receiving an additional family education component. If there is no evidence for the treatment effect of family education in CARE, then any effect of center-based childcare and family education treatment in CARE can be reasonably attributed to the center-based childcare component, which was shared with ABC. We outline a simple methodology to combine the data and exploit this fact.\\
 
-\noindent 
-
-Suppose that we fail to reject $H_{0}^D$, the null hypothesis that family education treatment in CARE had no treatment effect, and we reject $H_{0}^F$, the null hypothesis that center-based childcare and family education treatment in CARE had no treatment effect. Together, this evidence favors assuming that the center-based childcare was the main component generating treatment effects in CARE, if there were any. If this claim holds, we can pool the children fixed to control in ABC and CARE and pool the children fixed to treatment in ABC and to center-based childcare and family education treatment in CARE to test \eqref{eq:ho}, the effect of center-based childcare. Moreover, we can fix the children in the treatment \textbf{[Sherry: should this be control?]} groups to either no alternative preschool or to alternative preschool. We can then proceed as in Section~\ref{section:methodsquestions} to construct the estimates and correct for non-compliance.\\
+\noindent Suppose that we fail to reject $H_{0}^D$, the null hypothesis that family education treatment in CARE had no treatment effect, and we reject $H_{0}^F$, the null hypothesis that center-based childcare and family education treatment in CARE had no treatment effect. Together, this evidence favors assuming that the center-based childcare was the main component generating treatment effects in CARE, if there were any. If this claim holds, we can pool the children fixed to control in ABC and CARE and pool the children fixed to treatment in ABC and to center-based childcare and family education treatment in CARE to test \eqref{eq:ho}, the effect of center-based childcare. Moreover, we can fix the children in the treatment groups to either no alternative preschool or to alternative preschool. We can then proceed as in Section~\ref{section:methodsquestions} to construct the estimates and correct for non-compliance.\\
 
 \noindent We can also parameterize the effect of the family education component. Consider a linear and separable parameterization to estimate $\text{ITT} \left( \text{fix} P = 0\right)$, the effect of center-based childcare, combining the data of ABC and CARE. As in Section~\ref{section:methodsquestions}, $R$ denotes being assigned to a treatment group with center-based childcare---i.e., to treatment in ABC or to center-based childcare and family education in CARE. Similarly, $H$ indicates being assigned to family education treatment, i.e. to family education treatment in CARE. Then we write, 
 
@@ -304,7 +337,7 @@ Y = \Delta \left( \text{fix } P = 0\right) R +  \Gamma \left( \text{fix } P = 0\
 
 \noindent In this case, $\text{ITT} \left( \text{fix } P = 0\right)$ is the effect of center-based childcare when fixing the preschool alternative (to no alternative at all) and family education treatment---randomization to family treatment education allows us to fix family education without needing assumptions similar to Assumption~\ref{assumption:matching}.\\
 
-\noindent We report results in section ?? for the two methods we propose to combine the information in ABC and CARE. \textbf{[Sherry: Is this sentence necessary?]}
+\noindent We report results in Section~\ref{section:results} for the two methods we propose to combine the information in ABC and CARE.
 
 \subsection{Second-phase Treatment}
 
@@ -320,7 +353,7 @@ In order to do this, we consider an additional dimension in the sub-index of the
  & Fixing First-phase Treatment & Fixing Second-phase Treatment \\ \\ \hline
 Fixed to control       & $H_{0}^G: Y_{0,0} = Y_{0,1}$ & $H_{0}^H: Y_{0,0} = Y_{1,0}$ \\
 Fixed to treatment  & $H_{0}^I: Y_{1,0} = Y_{1,1}$ & $H_{0}^J: Y_{0,1} = Y_{1,1}$ \\ \\ \hline
-Not fixed                 & $H_{0}^A: Y_{d,0} = Y_{d,1}$ & $H_{0}^K: Y_{0,s} = Y_{1,s}$ \\  \hline \hline
+Not fixed                 & $H_{0}^A: Y_{r,0} = Y_{r,1}$ & $H_{0}^K: Y_{0,s} = Y_{1,s}$ \\  \hline \hline
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
@@ -349,9 +382,9 @@ H_{0}^G: Y_{0,0} \sim Y_{0,1}  \label{eq:h0fixfirst}
 H_{0}^K: Y_{d,1} \sim Y_{d,0} \label{eq:h02}
 \end{equation}
 
-\noindent where $d \in \{0,1\}$. The hypothesis in \eqref{eq:h02} is the second-phase counter-part to the the hypotheses in \eqref{eq:ho} and addresses the effectiveness of the second-phase of ABC relative to not having any second-phase treatment. It does not consider dynamics between the first and second phases of treatment, while hypotheses fixing the first-phase treatment do. 
+\noindent where $d \in \{0,1\}$. The hypothesis in \eqref{eq:h02} is the second-phase counter-part to the the hypotheses in \eqref{eq:ho} and addresses the effectiveness of the second-phase of ABC relative to not having any second-phase treatment. It does not consider dynamics between the first and second phases of treatment, while hypotheses fixing the first-phase treatment do.\\
 
-\noindent We report results for tests of the hypotheses we consider in this section, while also considering fixing the first-phase preschool alternative as we explain in Section~\ref{section:methodsquestions}.\textbf{[Sherry: is this sentence necessary?]}
+\noindent We report results for tests of the hypotheses we consider in this section, while also considering fixing the first-phase preschool alternative as we explain in Section~\ref{section:methodsquestions}.
 
 \subsection{Treatment Effects on Multiple Outcomes}
 
@@ -361,7 +394,7 @@ H_{0}^K: Y_{d,1} \sim Y_{d,0} \label{eq:h02}
 
 \noindent This method requires classifying each outcome as socially positive or negative, which is inherently biased. In the interest of objectivity, we present the counts on 547 outcomes, all of which we think are unambiguously either socially positive or socially negative in Appendix~\ref{appendix:data}. We offer some relevant examples in Section~\ref{section:data}.\\
 
-\noindent The different counts we propose are forms of combining functions \citep{Pesarin_Salmaso_2010_PermutationTests}.\footnote{This reference offers a comprehensive treatment of combining functions.} in order to combine information on several outcomes when testing patterns in a scientific or social phenomenon (in our case, an early childhood education program). For instance, suppose we want to test the hypothesis: 
+\noindent The different counts we propose are forms of combining functions \citep{Pesarin_Salmaso_2010_PermutationTests}.\footnote{This reference offers a comprehensive treatment of combining functions.} In order to combine information on several outcomes when testing patterns in a scientific or social phenomenon (in our case, an early childhood education program). For instance, suppose we want to test the hypothesis: 
 
 \begin{equation}
 H_{0}^A: Y_{0} \sim Y_{1} \label{eq:hoagain}
@@ -369,7 +402,7 @@ H_{0}^A: Y_{0} \sim Y_{1} \label{eq:hoagain}
 
 \noindent for multiple outcomes $Y$, and that, for each outcome individually, we already have an inference procedure readily available, i.e. we know the hypothesis, the statistics we use to test it, and the $p$-value associated with the test. For example, we want to test \eqref{eq:hoagain} using the ITT and a bootstrapped, non-parametric $p$-value.\\
 
-\noindent We consider three counts. First, a sum of the socially positive treatment effects. We can calculate this sum over the complete set of outcomes or certain categories of outcomes (e.g. employment, health, crime), without consideration of their significance when individually contrasted to test \eqref{eq:hoagain}.\textbf{[Sherry: this is either a confusing sentence or I just don't understand :P]} Next, we sum the outcomes that are significantly socially positive at the $10\%$ level, when hypothesis \eqref{eq:hoagain} is tested individually. Finally, we use the same sum but at a $5\%$ significance level.\\
+\noindent We consider three counts. First, a sum of the socially positive treatment effects. We can calculate this sum over the complete set of outcomes or certain categories of outcomes (e.g. employment, health, crime), without consideration of their significance when individually contrasted to test \eqref{eq:hoagain}. Next, we sum the outcomes that are significantly socially positive at the $10\%$ level, when hypothesis \eqref{eq:hoagain} is tested individually. Finally, we use the same sum but at a $5\%$ significance level.\\
 
 \noindent Consider constructing a combining function, in our case a count, for a group or block of outcomes $\mathcal{O}^g$, where $g \in \mathcal{G}$ and $\mathcal{G}$ is the index set for the groups of outcomes. Alternatively, we can construct the count for $\mathcal{O} : =  \bigcup \limits _{g \in \mathcal{G}} \mathcal{O}^g$. Each group includes the number of outcomes $\# \mathcal{O}^g$, and an associated sequence of treatment effects $\{ \widehat{\Delta}_{j}^{g} \}_{j = 1}^{\# \mathcal{O}^g}$. The test statistic for group $g$ is the count. For example, if we count the number of socially positive outcomes, the test statistic for group $g$ is 
 
@@ -377,17 +410,14 @@ H_{0}^A: Y_{0} \sim Y_{1} \label{eq:hoagain}
 T_{g} = \sum _{j=1}^{\# \mathcal{O}^g} \mathbf{1} \left[ \widehat{\Delta}_{j}^{g} > 0\right]. 
 \end{equation} 
 
-\noindent In order to produce an inference, we bootstrap this procedure and construct a null distribution. The $p$-value for the number of socially positive treatment effects in group $g$ is $1 - \widehat{F} \left( F_{g} \right)$, where $ F_{g}$ is the empirical bootstrap distribution of group $g$. The procedure is analogous when constructing statistics for the second and third combining functions.
+\noindent In order to produce an inference, we bootstrap this procedure and construct a null distribution. The $p$-value for the number of socially positive treatment effects in group $g$ is $1 - \widehat{F} \left( F_{g} \right)$, where $ F_{g}$ is the empirical bootstrap distribution of group $g$. The procedure is analogous when constructing statistics for the second and third combining functions.\\
 
-\noindent We present tests for the three combining functions for different groups of outcomes and for the unions of all of these group of outcomes, $\mathcal{O}$.
+\noindent In Section~\ref{section:results}, we present tests for the three combining functions for different groups of outcomes and for the unions of all of these group of outcomes, $\mathcal{O}$.
 
-%References
-\clearpage
-\singlespace
-\bibliographystyle{chicago}
-\bibliography{heckman}
+\section{Results} \label{section:results}
 
-\end{document} 
+\section{Final Comments} \label{section:conclusion}
+
 %References
 \clearpage
 \singlespace
