--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -21,15 +21,14 @@ Control &&\\
 \hspace{.5cm} Treatment Substitution & 70\% & $\sim$ 70\%\\
 \midrule
 Treatment & Center-based childcare & Center-based childcare and family education\\
-\hspace{.5cm} \textbf{Center-base} &&\\
-\hspace{.5cm} \textbf{Childcare} &&\\
+\hspace{.5cm} Center-base Childcare \\
 \hspace{.5cm} N &57&17\\
 \hspace{.5cm} Intensity &6.5--9.75 hours a day for 50 weeks per year&\checkmark\\
 \hspace{.5cm} Components & Instruction, medical care, nutrition, social services &\checkmark\\
 \hspace{.5cm} Staff-to-child Ratio &1:3 during ages 0--1 &\checkmark\\
 &1:4--5 during age 1--4 &\checkmark\\&1:5--6 during ages 4--5 &\checkmark\\
-\hspace{.5cm} Staff Qualifications &Mixed diplomas; experienced&\checkmark\\
-\hspace{.5cm} \textbf{Family Education} & Not part of the program &24\\
+\hspace{.5cm} Staff Qualifications &Mixed diplomas; experienced&\checkmark\\ \\
+\hspace{.5cm} Family Education & (not part of the program) &24\\
 \hspace{.5cm} Intensity && One hour-long home visits. 2--3 per month during ages 0--3. 1--2 per month during ages 4--5\\
 \hspace{.5cm} Curriculum & & Social and mental stimulation; parent-child interaction\\
 \hspace{.5cm} Staff-to-child Ratio &&1:1\\
